Fix card number on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,17 +83,17 @@ h1 {
 }
 
 .card-number-item {
-    width: 1.25rem;
+    width: 0.75rem;
     display: inline-block;
     vertical-align: top;
 }
 
-.card-number-item span {
-    position: absolute;
+.card-number-item.active {
+    width: 0.75rem;
 }
 
-.card-number-item.active {
-    width: 1rem;
+.card-number-item span {
+    position: absolute;
 }
 
 .card-name,
@@ -284,6 +284,14 @@ h1 {
         font-size: 1.75rem;
         top: 142px;
         left: 2rem;
+    }
+
+    .card-number-item {
+        width: 1.25rem;
+    }
+
+    .card-number-item.active {
+        width: 1rem;
     }
 
     .card-name,
